sumo/tests/duarouter/errors/Makefile.am
SUBDIRS =  false_net false_output no_input no_net no_output
EXTRA_DIST =  testsuite.duarouter
